--- a/part1_5.html
+++ b/part1_5.html
@@ -1,9 +1,18 @@
-<button id="버튼">버튼이에요</button>
+<div style="display : none">모달창0</div>
+<div style="display : none">모달창1</div>
+<div style="display : none">모달창2</div>
 
-<script>
+<button>버튼0</button>
+<button>버튼1</button>
+<button>버튼2</button>
 
-  document.getElementById('버튼').addEventListener('click', function(){
-    setTimeout(()=>{ console.log(this.innerHTML) }, 1000); 
+<script> 
+var 버튼들 = document.querySelectorAll('button');
+var 모달창들 = document.querySelectorAll('div');
+
+for( var i = 0 ; i < 2 ; i++)
+{
+  버튼들[0].addEventListener('click', function(){
+    모달창들[0].style.display = 'block';
   });
-
-</script>
+}
